@@ -1,18 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST pdfsandwich-0.0.7.tar.bz2 12730 SHA256 48587855b6a49082c480a08c82600dd6e9ff791cb5587459d1057e37ebde0767 SHA512 1a7ad1c5accc5db2d8c0a68c0dcd23691323fdde4c267ba49677c1619d7c03de3ff3bf5cd4646072424ae52d69914b38fee0501423a57e9d12363318beb68c9d WHIRLPOOL 2876fde0beddc4987fa94270799873295422befadaae307f9be30938a1e8ec29c955333fbed09a8f41e224cfaec70110007e07917bed6e12146b0de83faa407f
-DIST pdfsandwich-0.0.8.tar.bz2 12799 SHA256 fda9e1a73ba84b8922c4c0c975f3b278dacda1481cb9cb4d7b2cb4543e952f57 SHA512 0f9d540c360f73e3704319f4dad24002fa187c444b2c811c9bde310d4300b854aa11184cc41f079db078e2059e2bb976a89e6c654f5f51e0d3e9a10b07beb9f8 WHIRLPOOL 1aeda3f8e216914d02855995e06433f24c2f1c4ccaf5aaf9bc1459bab211d24cd530565f1fa7871b0f0de33e30a34701583a67ec18639dc78d8307f5d8cc8fb6
 DIST pdfsandwich-0.1.2.tar.bz2 14393 SHA256 db34e184e31fd6978e3021b1d4867491e6d1722515b5ab5b12f096fc58c3cbee SHA512 8e10db274180dad20551b2ad235b01a1ef37ffd8b69f27056fff3b12ab809bf2cba75c3c87645a6a846f68cf3923123b22d7678759310943fb99aa63a5253def WHIRLPOOL 9d60eac993ff048804e6547cee3f968406075520a8a4bcf2cb9599fb8a1d64b72e52f4b2d620075dda693e45807fd58c0dd9e9293a4e9aa3289e4b994c274ff2
-EBUILD pdfsandwich-0.0.7.ebuild 739 SHA256 ac9993cfff585bf5a156d5c502be5ab15273346d4885e97828fc1116234f1b63 SHA512 607a3972985905eec37004809d315c53c80bf9695cb414832c6e5ae78bacfecef1530b4233d471fc1eef1a63036a24f991d011c57ee1eee68e3a89d3daa51bc9 WHIRLPOOL ccf4abfca7865cf58db31a85dd9f8e582e0b500aa4e3aafe99a1e83cb9da80bbe7725b7f1ee82749553a7a4b67e003c770ff270a23740721f3c47ec4f95a7c3c
-EBUILD pdfsandwich-0.0.8.ebuild 739 SHA256 052c228fa92f17c54ff97db15427b9142b5b939f5d4a797938ac160b6cd0f460 SHA512 de631e88f42e49bac5f5044873d77719c9945f273c146aa62841aa8405aaf43fb77a905db6df9002f49235ba142f2665975b86f5e2385553f4df370c34428011 WHIRLPOOL 7887f65923eb77552bf9513abd4534bd7bde426f406a176be84b889df194cfd8f6f53fb86a4ed12582253b284a6c6254522be8ef33b1705d6a19fa373e3fb8b1
+EBUILD pdfsandwich-0.1.2-r1.ebuild 1087 SHA256 5d1b1c147ee2e0d0e02d20eb6b8e4b9eed0133d0396a7f4d638cef45184d4061 SHA512 8c7ef7c66177816febb628875896ac1072498181ea2bb9a01b3795b1d72c514b513393a957835bbe1dabbd0ea061f71ddaaf2e6e9c4d415bf9c45207b2938349 WHIRLPOOL 92c040afb31c2a04a2e9582fd9dc14f495a6a674f099e65841c9897ede712e6204aa0de73125432463cf2176de8c7112564b8d2ed01e2d87233fdaf09546634f
 EBUILD pdfsandwich-0.1.2.ebuild 1005 SHA256 260179e27fd3d7fa8dd42e5601c0b0112d063f7f3091ce997643fa63ed41aa72 SHA512 40fa67b836ad52dc5858f9f0b0af9585dc6c10960a41c56b18faebb9a8a5d74bec865b8f1ce0f4936653ff5bc499ca68de3caca0c69da3c151fbb4898cc5d8b8 WHIRLPOOL 6e008516ad3357f586638cc440022d41551b0de69008646ffb57fb190fd00142a5d588d4440fe0e662d9691bf9b824381ed9cf10084afe1ca5b4f6026e09142c
-MISC ChangeLog 1347 SHA256 988175541f9f3e6a8cbc0ed13aa079f697da6e9cba068d9122f9675169a223c7 SHA512 ece8d295c1732269082460ff5fce8ac3c5292cd40d5fc81fa45a6ab594c3a60f988d0f024e888cf54d4f86bf073fc2ca73d5dfb69b3ca17407e09be3fa29f89c WHIRLPOOL 616f70f72ad13dcb766934c2cf6655522a6bddd7607b4d570f242c96bd2da1e77c49d0db88ded0b6660e06aae687333f684a7a60a7a9740ff2c9c3d98d109136
+MISC ChangeLog 1583 SHA256 6c0b555d76f10aa76b9108a737b190ed8f440f3013dccb24b674807bf13b9f5b SHA512 bbba2a2a8e01db5d5309c4275efb58fb992e6fb12a9a213e461545fd26ff7fac4e024de99ce4c1894025cba8eac1fad5631cb3eb1d72d36809100bccfd5f0f96 WHIRLPOOL 468516775582221b27b2da0498a894557da5d72e1d858fe16c1217e575e33a2666f6fbfed1b7465e7a631a790ef6968b7ecacdab4ae0614d7a0e6132f315ed37
 MISC metadata.xml 888 SHA256 25c83b760cedca0caedd58fd09e7ac9fa56101b33fc1ecce514170cb94fe7f2d SHA512 8f11d33de6fdd533fe8f9de9b905682b049b9079e507aca2435428a125c13724cb0745305867e06ec95aa69d799801fbe8f15e96ac3462db0f549fc65c01c237 WHIRLPOOL b2a743bf7a7aa152c05f7deee68d8c06c7563336c817d5d76f0bfba13fa5d65339841f2b0ca9d72e1be409f9b6ad3f6c36a5f55aeab7c322eeb1f9ff741ab8e8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlPXn1sACgkQid6yGVZcMryXlwD9Fe/8myxDN0R13Paq5Vg0//mg
-8N1cDizykvRCDg67/jAA/3YFggxApPyO5S9V+Iy5T9ihTlc5VlQmtpnI7SXqmSHB
-=+E6E
+iF4EAREIAAYFAlPjYOYACgkQid6yGVZcMrxmMwD8Cl9OaSCN2ORiQIiQK3z99Hbg
+u94QMy0MM8jJ4Ig+aHAA/jsbP44ut4YiJLoEaz2lLarwNeOUBv8OXr10cKM+KXnz
+=AOTg
 -----END PGP SIGNATURE-----
