@@ -1,11 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=sys-apps/gawk >=dev-lang/ocaml-3.10[ocamlopt]
-DESCRIPTION=generator of sandwich OCR pdf files
-EAPI=4
-HOMEPAGE=http://www.tobias-elze.de/pdfsandwich
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=>=app-text/tesseract-3.00 media-gfx/exact-image app-text/ghostscript-gpl
-SLOT=0
-SRC_URI=mirror://sourceforge/pdfsandwich/pdfsandwich-0.0.7.tar.bz2
-_md5_=ac40a219cd932f53f42ad11037f4200b
