@@ -4,10 +4,10 @@ DESCRIPTION=free, small, and standard compliant Prolog compiler
 EAPI=4
 HOMEPAGE=http://www.swi-prolog.org/
 IUSE=archive debug doc +gmp hardened java minimal odbc +readline ssl static-libs test zlib X elibc_FreeBSD java
-KEYWORDS=amd64 ppc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
+KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos
 LICENSE=LGPL-2.1
 RDEPEND=sys-libs/ncurses archive? ( app-arch/libarchive ) zlib? ( sys-libs/zlib ) odbc? ( dev-db/unixODBC ) readline? ( sys-libs/readline ) gmp? ( dev-libs/gmp ) ssl? ( dev-libs/openssl ) java? ( >=virtual/jdk-1.4 ) X? ( virtual/jpeg x11-libs/libX11 x11-libs/libXft x11-libs/libXpm x11-libs/libXt x11-libs/libICE x11-libs/libSM ) java? ( >=dev-java/java-config-2.1.9-r1 )
 SLOT=0
-SRC_URI=http://www.swi-prolog.org/download/stable/src/pl-6.4.1.tar.gz mirror://gentoo/swi-prolog-6.4.1-gentoo-patchset-0.tar.gz
+SRC_URI=http://www.swi-prolog.org/download/devel/src/pl-7.1.18.tar.gz mirror://gentoo/swi-prolog-7.1.18-gentoo-patchset-0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7de66eaea3178303a6463646e5c0b0bf
+_md5_=46147b9afce22109c7ea9d4a3b4cea14
